# globus-compute-common

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  pyproject.toml  run_local_redis.sh  setup.cfg  tox.ini
.github/: dependabot.yml
.github/actions/redis/: Dockerfile  action.yml  run-redis.sh
.github/workflows/: build.yaml  changelog.yml
changelog.d/: 20211014_215238_sirosen.md  20211015_181331_sirosen_improved_connnections.md  20211022_043900_sirosen_redis_connection_rewrite.md  20211103_155841_yadudoc1729_tweaked_task_storage.md  20211104_120816_yadudoc1729_no_frill_storage.md  20211111_193931_sirosen_messagepack.md  20211122_192309_sirosen_allow_no_s3_storage.md  20211213_115038_yadudoc1729_add_payload_storage.md  20211220_204054_sirosen_add_redis_task.md  20220107_152015_yadudoc1729_add_MaxResultSizeExceeded_exception.md  20220113_163901_loonride_add_auth_errors.md  20220204_005442_sirosen_messagepack_v1.md  20220211_220752_sirosen_update_message_types.md  20220505_110306_kevin_add_section_timer_for_developer_led_profiling.md  20220518_162312_sirosen.md  20220518_231006_sirosen_result_exec_timing.md  20220613_112245_chris_container_id_none.md  20220613_143742_chris_sdk_version_sharing.md  20220613_195030_sirosen_messagepack_wrong_messagetype.md  20220714_165620_kevin_add_status_log_property_to_redistask.md  20220812_153348_rchard_add_timing_info.md  20221006_233813_kevin_add_queue_name_to_redistask.md  20221115_120954_chris_batch_run_payload_limit_errors.md  20221205_200127_30907815+rjmello_func_size_error.md  20230120_150207_kevin_add_container_location_to_task.md  20230303_141732_chris_rename_ep_status_report_field.md  20240322_121115_30907815+rjmello_pydantic_v2_support_sc_26075.md  20240327_225924_30907815+rjmello_HEAD.md  20241108_161439_chris_update_supported_python_versions.md  20250128_122359_30907815+rjmello_uuid_serde.md  20250131_101012_30907815+rjmello_redis_task_owner_id.md  20250606_083513_kevin_upgrade_minimum_python.md  20251031_124658_chris.md  20260706_203941_chris_real_protocols.md  README.md
src/funcx_common/: errors.py  funcx_flake8.py  redis_endpoint_lock.py  redis_task.py  response_errors.py  sdk_version_sharing.py
src/funcx_common/messagepack/: README.md  __init__.py  common.py  exceptions.py  packer.py  protocol.py  validators.py
src/funcx_common/messagepack/message_types/: __init__.py  base.py  ep_status_report.py  heartbeat.py  heartbeat_req.py  manager_status_report.py  result.py  results_ack.py  task.py  task_cancel.py  task_transition.py
src/funcx_common/messagepack/protocol_versions/: proto0.py  proto1.py
src/funcx_common/redis/: __init__.py  connection.py  fields.py  pubsub.py  serde.py  task_queue.py
src/funcx_common/response_errors/: __init__.py  constants.py  error_base.py  error_classes.py
src/funcx_common/task_storage/: __init__.py  base.py  chain.py  default_storage.py  memory.py  redis.py  redis_implicit.py  s3.py
src/funcx_common/tasks/: __init__.py  constants.py  protocol.py
src/funcx_common/utils/: section_timer.py
src/globus_compute_common/: globus_compute_flake8.py  pydantic_v1.py  redis_task.py  sdk_version_sharing.py  testing.py
src/globus_compute_common/messagepack/: README.md  packer.py  protocol.py
src/globus_compute_common/messagepack/message_types/: base.py  container.py  ep_status_report.py  result.py  task.py
src/globus_compute_common/messagepack/protocol_versions/: proto1.py
src/globus_compute_common/redis/: __init__.py  connection.py  fields.py  pubsub.py  serde.py  task_queue.py
src/globus_compute_common/task_storage/: default_storage.py  redis.py  s3.py
src/globus_compute_common/tasks/: protocol.py
tests/: conftest.py
tests/functional/messagepack/: test_endpoint_compatibility.py
tests/functional/redis/: test_fields.py  test_pubsub.py  test_redis_endpoint_lock.py  test_task_queue.py
tests/functional/storage/: test_implicit_redis.py  test_s3_functional.py  test_s3_storage.py
tests/integration/: test_redis_fields.py
tests/unit/: test_endpoint_lock.py  test_messagepack.py  test_redis_connection.py  test_redis_serde.py  test_redis_task.py  test_response_errors.py  test_s3_storage.py  test_sdk_version_sharing.py  test_section_timer.py  test_storage.py  test_task_storage.py
