[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
coverage = ["coverage[toml]"]
test = [
    "pytest<10",
    "pytest-cov<8",
    "pytest-xdist>=3.7.0",
    "types-redis",
    { include-group = "coverage" },
]
typing = [
    "mypy",
    "types-redis",
]
release = [
    "scriv",
    "twine",
    "build",
]
dev = [
    { include-group = "test" },
    { include-group = "release" },
    { include-group = "typing" },
]

[project]
name = "globus-compute-common"
version = "0.7.1"
authors = [
    {name = "The Globus Compute Team",email = "support@globus.org"}
]
description = "Common tools for Globus Compute projects"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = "Apache-2.0"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pydantic>=1,<3",
]

[project.urls]
repository = "https://github.com/globus/globus-compute-common"

[project.optional-dependencies]
boto3 = ["boto3>=1.37"]
moto = ["moto[s3]>=5,<6"]
redis = ["redis>=5.3,<8"]

[tool.setuptools.package-data]
globus_compute_common = [
  "py.typed"
]

[tool.scriv]
format = "md"
output_file = "CHANGELOG.md"
md_header_level = 2
entry_title_template = '{{ version }} ({{ date.strftime("%%Y-%%m-%%d") }})'

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
