[metadata]
name = funcx-common
version = 0.0.8
description = Common tools for funcX projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/funcX-faas/funcx-common
author = Stephen Rosen
author_email = sirosen@globus.org

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
include_package_data = true
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
funcx_common = py.typed

[options.extras_require]
dev =
    pytest<7
    pytest-cov<3
    pytest-xdist<3
    types-redis
    moto[s3]<3
redis = redis>=3.5.3,<4
boto3 = boto3>=1.19.0

[scriv]
format = md
output_file = CHANGELOG.md
md_header_level = 2
entry_title_template = {{ version }} ({{ date.strftime("%%Y-%%m-%%d") }})

[isort]
profile = black

[flake8]
exclude = .git,.tox,__pycache__,dist,venv,.venv*
# we enforce 80 char width with `black` "loosely", so flake8 should be set to
# not fail on up to 88 chars of width
max-line-length = 88
ignore = W503,W504,E203

[flake8:local-plugins]
extension =
    FX = funcx_flake8:Plugin
paths = ./src/funcx_common/

[mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
no_implicit_optional = true
