[metadata]
name = globus-compute-common
version = 0.3.0a0
description = Common tools for Globus Compute projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/funcX-faas/funcx-common
author = Globus Team
author_email = support@globus.org

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    pydantic>=1,<2
include_package_data = true
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
funcx_common = py.typed

[options.extras_require]
dev =
    pytest<8
    pytest-cov<5
    pytest-xdist<4
    types-redis
moto =
    moto[s3]<5
redis = redis>=3.5.3,<5
boto3 = boto3>=1.19.0

[scriv]
format = md
output_file = CHANGELOG.md
md_header_level = 2
entry_title_template = {{ version }} ({{ date.strftime("%%Y-%%m-%%d") }})

[isort]
profile = black

[flake8]
exclude = .git,.tox,__pycache__,dist,venv,.venv*
# we enforce 80 char width with `black` "loosely", so flake8 should be set to
# not fail on up to 88 chars of width
max-line-length = 88
ignore = W503,W504,E203

[flake8:local-plugins]
extension =
    FX = globus_compute_flake8:Plugin
paths = ./src/globus_compute_common/

[mypy]
strict = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
